--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v13:19.+'
+    compile 'com.android.support:support-v4:19.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/Parse-1.4.2.jar')
 }
