--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.St">
         <compatible-screens>
-            <!-- all small size screens -->
+
+        <!-- all small size screens -->
             <screen
                 android:screenDensity="ldpi"
                 android:screenSize="small" />
@@ -48,15 +49,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name="com.pixel.singletune.app.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
         <activity
             android:name="com.pixel.singletune.app.SignupActivity"
             android:label="@string/title_activity_signup"
             android:parentActivityName="com.pixel.singletune.app.LoginActivity">
-            <meta-data
+        <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="LoginActivity" />
         </activity>
@@ -66,6 +71,17 @@
             android:parentActivityName="com.pixel.singletune.app.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
+            android:name="com.pixel.singletune.app.SearchResultsActivity"
+            android:label="@string/title_activity_search_results"
+            android:parentActivityName="com.pixel.singletune.app.MainActivity">
+        <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
