--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
       IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
       to match your app's package name + ".permission.C2D_MESSAGE".
     -->
-    <permission android:protectionLevel="signature"
-        android:name="com.pixel.singletune.app.permission.C2D_MESSAGE" />
+    <permission
+        android:name="com.pixel.singletune.app.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="com.pixel.singletune.app.permission.C2D_MESSAGE" />
 
     <application
@@ -31,7 +33,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name="com.pixel.singletune.app.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,60 +42,79 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.LoginActivity"
+            android:name="com.pixel.singletune.app.ui.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".ui.SignupActivity"
+            android:name="com.pixel.singletune.app.ui.SignupActivity"
             android:label="@string/title_activity_signup"
-            android:parentActivityName=".ui.LoginActivity" >
+            android:parentActivityName="com.pixel.singletune.app.ui.LoginActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="LoginActivity" />
         </activity>
         <activity
-            android:name=".ui.ProfileActivity"
+            android:name="com.pixel.singletune.app.ui.ProfileActivity"
             android:label="@string/title_activity_profile"
-            android:parentActivityName=".ui.MainActivity"
+            android:parentActivityName="com.pixel.singletune.app.ui.MainActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
         <activity
-            android:name=".ui.SearchActivity"
+            android:name="com.pixel.singletune.app.ui.SearchActivity"
             android:label="@string/title_activity_search_results"
-            android:parentActivityName=".ui.MainActivity" >
+            android:parentActivityName="com.pixel.singletune.app.ui.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
         <activity
-            android:name=".ui.NotificationsActivity"
+            android:name="com.pixel.singletune.app.ui.NotificationsActivity"
             android:label="@string/title_activity_notifications"
-            android:parentActivityName=".ui.MainActivity" >
+            android:parentActivityName="com.pixel.singletune.app.ui.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <activity
+            android:name=".ui.SendTuneActivity"
+            android:label="@string/SendTuneActivityLabel"
+            android:parentActivityName=".ui.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity"/>
+
+        </activity>
+
         <service android:name="com.parse.PushService" />
-        <receiver android:name="com.parse.ParseBroadcastReceiver">
+
+        <receiver android:name="com.parse.ParseBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <!--
-                  IMPORTANT: Change "com.parse.starter" to match your app's package name.
-                -->
+<!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.pixel.singletune.app" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name="com.pixel.singletune.app.ui.VoiceRecorderActivity"
+            android:label="@string/title_activity_voice_recorder"
+            android:parentActivityName="com.pixel.singletune.app.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 
 </manifest>
