Adding hashtag helper and Comment subclass

--- a/facebook/tests/ant.properties
+++ b/facebook/tests/ant.properties
@@ -16,5 +16,5 @@
 # The password will be asked during the build when you use the 'release' target.
 
 # Removed based on advice at code.google.com/p/android/issues/detail?id=21108#c2
-# and the comment that follows.
+# and the mComment that follows.
 # tested.project.dir=../TestApp
